# Van-Fleet-Load-AI-Swarm

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README-en.md  README.md  latest_changes.patch  tauri.conf.json
.github/workflows/: ci.yml
crates/ollama-lan-share/: Cargo.toml  README.md
crates/ollama-lan-share/src/: lib.rs  main.rs
crates/ollama-lan-share/src/backend/: manager.rs  mod.rs  network_discovery.rs
crates/ollama-lan-share/src/backend/ollama_client/: client.rs  mod.rs
crates/ollama-lan-share/src/shared/: mod.rs
crates/ollama-lan-share/src/shared/models/: core.rs  mod.rs  network.rs
crates/vas-core/: Cargo.toml
crates/vas-core/src/: lib.rs
crates/vas-ollama-share/: Cargo.toml
crates/vas-ollama-share/src/: main.rs
crates/vgs/: Cargo.toml
crates/vgs-discovery/: Cargo.toml
crates/vgs-discovery/src/: main.rs
crates/vgs/src/: app.rs  app_actions.rs  app_types.rs  app_ui.rs  main.rs
crates/vgs/src/components/: mod.rs  network.rs  ollama.rs  resources.rs  task.rs
docs/: README-en.md  README.md  RESOURCE_MANAGER.md  agents.md  api-key-management-en.md  api-key-management.md  architecture.md  best-practices.md  c-compiler-en.md  c-compiler.md  component-rules.md  future.md  getting-started.md  ollama-en.md  ollama.md  progress-en.md  progress.md  resource-manager-audit.md  resource-manager-cli.md  resource-manager-en.md  resource-manager.md  technical-implementation.md
docs/structure/: backend-services.md  data-models.md  file-tree.md  frontend-api.md
examples/: hello.c
skills/: README.md  index.json
skills/backend/: reqwest-error-handling.md
skills/gui/: egui-componentization.md
skills/security/: api-key-vault.md
src/: lib.rs  main.rs
src/backend/: agent_scheduler.rs  api_manager.rs  c_compiler.rs  compilation_scheduler.rs  mod.rs  network_discovery.rs  ollama_client.rs  provider_config.rs  resource_manager.rs  resource_manager_example.rs  skills.rs
src/backend/agents/: architect.rs  environment.rs  mod.rs  programmer.rs
src/backend/ollama_client/: types.rs
src/frontend/: agent_monitor.rs  app.rs  client_gui.rs  compiler_commands.rs  mod.rs  ollama_commands.rs  project_commands.rs  project_view.rs  resource_commands.rs  task_commands.rs  vault_commands.rs
src/shared/: mod.rs  models.rs  utils.rs
src/shared/models/: core.rs  network.rs  resource.rs  vault.rs
