[package]
name = "vangriten-ai-swarm"
version = "0.1.0"
edition = "2021"
description = "Vangriten AI Swarm - A high-concurrency AI swarm framework"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
autobins = false

[workspace]
members = [
	"crates/vas-core",
	"crates/vgs",
]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Tauri for desktop app
# Keep Cargo features aligned with `tauri.conf.json` allowlist (enforced by `tauri-build`).
tauri = { version = "1.5", features = [
	"shell-open",
	"dialog-ask",
	"dialog-confirm",
	"dialog-message",
	"dialog-open",
	"dialog-save",
	"fs-all",
	"http-all",
	"notification-all",
	"os-all",
	"path-all",
	"process-exit",
	"process-relaunch"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Atomic operations for Gatling scheduler
crossbeam = "0.8"

# mDNS for network discovery
mdns = "3.0"

# AES encryption for API keys
aes-gcm = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Path handling
path-absolutize = "3.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Randomness (used for crypto nonces)
rand = "0.8"

# Core logic split into a separate crate for faster incremental builds.
vas-core = { path = "crates/vas-core" }

# System information
sys-info = "0.9"
num_cpus = "1.16"


[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[[bin]]
name = "vangriten-ai-swarm"
path = "src/main.rs"

[[bin]]
name = "resource-manager"
path = "src/bin/resource_manager.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true