[package]
name = "ollama-lan-share"
version = "0.1.0"
edition = "2021"
description = "LAN sharing for Ollama AI models with GUI"
authors = ["Your Name <259901434@qq.com>"]
license = "MIT"
repository = "https://github.com/yourusername/ollama-lan-share"
keywords = ["ollama", "lan", "ai", "sharing", "gui"]
categories = ["command-line-utilities", "gui"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eframe = { version = "0.27" }
egui-chinese-font = "0.1"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"

# HTTP client for Ollama
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# HTTP proxy (optional auth when sharing)
axum = "0.7"
url = "2"

# Packet authentication for LAN discovery
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
