[package]
name = "vas-ollama-share"
version = "0.1.0"
edition = "2021"

[dependencies]
vas-core = { path = "../vas-core" }

tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Used via vas-core, listed here only if we directly use serde types in output
serde_json = "1.0"
