[package]
name = "vgs"
version = "0.1.0"
edition = "2021"

[dependencies]
vas-core = { path = "../vas-core" }

eframe = { version = "0.27" }
egui-chinese-font = "0.1"

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["native-gui"]
native-gui = []
